--- a/public/home.html
+++ b/public/home.html
@@ -20,6 +20,7 @@
             <li><a href="login.html">Login</a></li>
             <li><a href="buscar_medicamento.html">Buscar Medicamento</a></li>
             <li><a href="cadastro2_cliente.html">Cadastro Cliente 2</a></li>
+            <li><a href="central_medicamentos-index.html">Central Medicamentos</a></li>
             <!-- abaixo corrigir -->
             <li><a href="home.html">Home</a></li>            
             <li><a href="gerenc-farm-index.html">Gerenciamento de Estoque</a></li>
