--- a/buscar_estoque.html
+++ b/buscar_estoque.html
@@ -18,5 +18,8 @@
         <button onclick="window.location.href='gerenc-farm-index.html'">Voltar</button>                
     </form>
     <p id="resultado"></p>
+    </br>
+   <p>Projeto Integrador III </p>
+    <a href="https://belisnalvacosta.github.io/New-farm" target="_blank" alt="github">Controle de estoque</a>
 </body>
 </html>
