Committing update of the files

--- a/central_medicamentos-index.html
+++ b/central_medicamentos-index.html
@@ -63,7 +63,7 @@
   <script src="home.html"></script>
   <script src="#"></script> 
     <footer>
-       
+      <p><a href="https://belisnalvacosta.github.io/Connect-Pharm/">Connect-Pharm</a></p>       
     </footer>
   <script src="script.js/central-medicamentos.js"></script>
 </body>
